parser.out
Created by PLY (http://www.dabeaz.com/ply)

Unused terminals:

    BLOQUE_COMENTARIOS
    COMENTARIO
    COMILLADOBLE
    COMILLASIMPLE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> defConf defAuto bloqueLoop
Rule 2     defConf -> DEF_CONF bloqueCodigoDefConf
Rule 3     bloqueCodigoDefConf -> LLAVE_IZQ listaDeclaracionesAsignaciones LLAVE_DER
Rule 4     listaDeclaracionesAsignaciones -> declaracionVariable listaDeclaracionesAsignaciones
Rule 5     listaDeclaracionesAsignaciones -> declaracionAsignacionVariable listaDeclaracionesAsignaciones
Rule 6     listaDeclaracionesAsignaciones -> sentAsignacion listaDeclaracionesAsignaciones
Rule 7     listaDeclaracionesAsignaciones -> empty
Rule 8     defAuto -> DEF_AUTO bloqueCodigoDefAuto
Rule 9     bloqueCodigoDefAuto -> LLAVE_IZQ listaFunciones LLAVE_DER
Rule 10    listaFunciones -> declaracionFuncion listaFunciones
Rule 11    listaFunciones -> empty
Rule 12    bloqueLoop -> LOOP_PRINCIPAL bloqueCodigo
Rule 13    bloqueCodigo -> LLAVE_IZQ listaSentencias LLAVE_DER
Rule 14    listaSentencias -> sentencia
Rule 15    listaSentencias -> listaSentencias listaSentencias
Rule 16    sentencia -> declaracionVariable
Rule 17    sentencia -> declaracionAsignacionVariable
Rule 18    sentencia -> declaracionFuncion
Rule 19    sentencia -> sentAsignacion
Rule 20    sentencia -> sentSi
Rule 21    sentencia -> sentParaCada
Rule 22    sentencia -> llamarFuncion
Rule 23    sentencia -> imprimir
Rule 24    sentencia -> retornar
Rule 25    sentencia -> incremento
Rule 26    sentencia -> decremento
Rule 27    declaracionVariable -> tipoDato ID PUNTOCOMA
Rule 28    declaracionVariable -> tipoDato CORCHETE_IZQ CORCHETE_DER ID PUNTOCOMA
Rule 29    declaracionAsignacionVariable -> tipoDato ID ASIGNACION expresion PUNTOCOMA
Rule 30    declaracionAsignacionVariable -> tipoDato ID ASIGNACION llamarFuncion PUNTOCOMA
Rule 31    declaracionAsignacionVariable -> tipoDato ID ASIGNACION instanciaObj PUNTOCOMA
Rule 32    declaracionAsignacionVariable -> tipoDato CORCHETE_IZQ CORCHETE_DER ID ASIGNACION bloqueArgumentos PUNTOCOMA
Rule 33    sentAsignacion -> ID ASIGNACION expresion PUNTOCOMA
Rule 34    sentAsignacion -> accesoArreglo ASIGNACION expresion PUNTOCOMA
Rule 35    sentAsignacion -> ID ASIGNACION llamarFuncion PUNTOCOMA
Rule 36    instanciaObj -> ID PARENTESIS_IZQ listaArgumentos PARENTESIS_DER PUNTOCOMA
Rule 37    tipoDato -> TIPO_FECHA
Rule 38    tipoDato -> TIPO_HORA
Rule 39    tipoDato -> TIPO_BOOL
Rule 40    tipoDato -> TIPO_ENTERO
Rule 41    tipoDato -> TIPO_REAL
Rule 42    tipoDato -> TIPO_CADENA
Rule 43    tipoDato -> TIPO_SENSOR
Rule 44    tipoDato -> TIPO_DISPOSITIVO
Rule 45    expresion -> expresionAritmetica
Rule 46    expresion -> expresionLogica
Rule 47    expresion -> expresionComparacion
Rule 48    expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 49    expresion -> valor
Rule 50    expresion -> accesoArreglo
Rule 51    expresion -> expresion expresion
Rule 52    valor -> NUMERO
Rule 53    valor -> REAL
Rule 54    valor -> verdad
Rule 55    valor -> falso
Rule 56    valor -> CADENA
Rule 57    expresionAritmetica -> expresion SUMA expresion
Rule 58    expresionAritmetica -> expresion RESTA expresion
Rule 59    expresionAritmetica -> expresion MULTIPLICACION expresion
Rule 60    expresionAritmetica -> expresion DIVISION expresion
Rule 61    expresionLogica -> expresion AND expresion
Rule 62    expresionLogica -> expresion OR expresion
Rule 63    expresionLogica -> NOT expresion
Rule 64    expresionComparacion -> expresion MENORQUE expresion
Rule 65    expresionComparacion -> expresion MAYORQUE expresion
Rule 66    expresionComparacion -> expresion MENORIGUAL expresion
Rule 67    expresionComparacion -> expresion MAYORIGUAL expresion
Rule 68    expresionComparacion -> expresion IGUAL expresion
Rule 69    expresionComparacion -> expresion DIFERENTE expresion
Rule 70    accesoArreglo -> ID CORCHETE_IZQ expresion CORCHETE_DER
Rule 71    declaracionFuncion -> FUNCION ID PARENTESIS_IZQ listaParametros PARENTESIS_DER RETORNO tipoDato bloqueCodigo
Rule 72    listaParametros -> parametro
Rule 73    listaParametros -> parametro COMA listaParametros
Rule 74    listaParametros -> empty
Rule 75    parametro -> tipoDato ID
Rule 76    sentSi -> SI PARENTESIS_IZQ expresion PARENTESIS_DER bloqueCodigo sentSiNo
Rule 77    sentSiNo -> SINO bloqueCodigo
Rule 78    sentSiNo -> SINO sentSi
Rule 79    sentSiNo -> empty
Rule 80    sentParaCada -> PARACADA ID EN ID bloqueCodigo
Rule 81    llamarFuncion -> ID PARENTESIS_IZQ listaArgumentos PARENTESIS_DER PUNTOCOMA
Rule 82    llamarFuncion -> SISTEMA PUNTO ID PARENTESIS_IZQ listaArgumentos PARENTESIS_DER PUNTOCOMA
Rule 83    llamarFuncion -> ID PUNTO ID PARENTESIS_IZQ listaArgumentos PARENTESIS_DER PUNTOCOMA
Rule 84    listaArgumentos -> expresion
Rule 85    listaArgumentos -> expresion COMA listaArgumentos
Rule 86    listaArgumentos -> bloqueArgumentos
Rule 87    listaArgumentos -> empty
Rule 88    bloqueArgumentos -> LLAVE_IZQ listaValores LLAVE_DER
Rule 89    listaValores -> valor
Rule 90    listaValores -> valor COMA listaValores
Rule 91    imprimir -> IMPRIMIR PARENTESIS_IZQ CADENA PARENTESIS_DER PUNTOCOMA
Rule 92    retornar -> RETORNAR expresion PUNTOCOMA
Rule 93    retornar -> RETORNAR llamarFuncion PUNTOCOMA
Rule 94    incremento -> MASMAS ID PUNTOCOMA
Rule 95    incremento -> ID MASMAS PUNTOCOMA
Rule 96    decremento -> MENOSMENOS ID PUNTOCOMA
Rule 97    decremento -> ID MENOSMENOS PUNTOCOMA
Rule 98    empty -> <empty>

Terminals, with rules where they appear

AND                  : 61
ASIGNACION           : 29 30 31 32 33 34 35
BLOQUE_COMENTARIOS   : 
CADENA               : 56 91
COMA                 : 73 85 90
COMENTARIO           : 
COMILLADOBLE         : 
COMILLASIMPLE        : 
CORCHETE_DER         : 28 32 70
CORCHETE_IZQ         : 28 32 70
DEF_AUTO             : 8
DEF_CONF             : 2
DIFERENTE            : 69
DIVISION             : 60
EN                   : 80
FUNCION              : 71
ID                   : 27 28 29 30 31 32 33 35 36 70 71 75 80 80 81 82 83 83 94 95 96 97
IGUAL                : 68
IMPRIMIR             : 91
LLAVE_DER            : 3 9 13 88
LLAVE_IZQ            : 3 9 13 88
LOOP_PRINCIPAL       : 12
MASMAS               : 94 95
MAYORIGUAL           : 67
MAYORQUE             : 65
MENORIGUAL           : 66
MENORQUE             : 64
MENOSMENOS           : 96 97
MULTIPLICACION       : 59
NOT                  : 63
NUMERO               : 52
OR                   : 62
PARACADA             : 80
PARENTESIS_DER       : 36 48 71 76 81 82 83 91
PARENTESIS_IZQ       : 36 48 71 76 81 82 83 91
PUNTO                : 82 83
PUNTOCOMA            : 27 28 29 30 31 32 33 34 35 36 81 82 83 91 92 93 94 95 96 97
REAL                 : 53
RESTA                : 58
RETORNAR             : 92 93
RETORNO              : 71
SI                   : 76
SINO                 : 77 78
SISTEMA              : 82
SUMA                 : 57
TIPO_BOOL            : 39
TIPO_CADENA          : 42
TIPO_DISPOSITIVO     : 44
TIPO_ENTERO          : 40
TIPO_FECHA           : 37
TIPO_HORA            : 38
TIPO_REAL            : 41
TIPO_SENSOR          : 43
error                : 
falso                : 55
verdad               : 54

Nonterminals, with rules where they appear

accesoArreglo        : 34 50
bloqueArgumentos     : 32 86
bloqueCodigo         : 12 71 76 77 80
bloqueCodigoDefAuto  : 8
bloqueCodigoDefConf  : 2
bloqueLoop           : 1
declaracionAsignacionVariable : 5 17
declaracionFuncion   : 10 18
declaracionVariable  : 4 16
decremento           : 26
defAuto              : 1
defConf              : 1
empty                : 7 11 74 79 87
expresion            : 29 33 34 48 51 51 57 57 58 58 59 59 60 60 61 61 62 62 63 64 64 65 65 66 66 67 67 68 68 69 69 70 76 84 85 92
expresionAritmetica  : 45
expresionComparacion : 47
expresionLogica      : 46
imprimir             : 23
incremento           : 25
instanciaObj         : 31
listaArgumentos      : 36 81 82 83 85
listaDeclaracionesAsignaciones : 3 4 5 6
listaFunciones       : 9 10
listaParametros      : 71 73
listaSentencias      : 13 15 15
listaValores         : 88 90
llamarFuncion        : 22 30 35 93
parametro            : 72 73
programa             : 0
retornar             : 24
sentAsignacion       : 6 19
sentParaCada         : 21
sentSi               : 20 78
sentSiNo             : 76
sentencia            : 14
tipoDato             : 27 28 29 30 31 32 71 75
valor                : 49 89 90


state 0

    (0) S' -> . programa
    (1) programa -> . defConf defAuto bloqueLoop
    (2) defConf -> . DEF_CONF bloqueCodigoDefConf

    DEF_CONF        shift and go to state 3

    programa                       shift and go to state 1
    defConf                        shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> defConf . defAuto bloqueLoop
    (8) defAuto -> . DEF_AUTO bloqueCodigoDefAuto

    DEF_AUTO        shift and go to state 5

    defAuto                        shift and go to state 4

state 3

    (2) defConf -> DEF_CONF . bloqueCodigoDefConf
    (3) bloqueCodigoDefConf -> . LLAVE_IZQ listaDeclaracionesAsignaciones LLAVE_DER

    LLAVE_IZQ       shift and go to state 7

    bloqueCodigoDefConf            shift and go to state 6

state 4

    (1) programa -> defConf defAuto . bloqueLoop
    (12) bloqueLoop -> . LOOP_PRINCIPAL bloqueCodigo

    LOOP_PRINCIPAL  shift and go to state 9

    bloqueLoop                     shift and go to state 8

state 5

    (8) defAuto -> DEF_AUTO . bloqueCodigoDefAuto
    (9) bloqueCodigoDefAuto -> . LLAVE_IZQ listaFunciones LLAVE_DER

    LLAVE_IZQ       shift and go to state 11

    bloqueCodigoDefAuto            shift and go to state 10

state 6

    (2) defConf -> DEF_CONF bloqueCodigoDefConf .

    DEF_AUTO        reduce using rule 2 (defConf -> DEF_CONF bloqueCodigoDefConf .)


state 7

    (3) bloqueCodigoDefConf -> LLAVE_IZQ . listaDeclaracionesAsignaciones LLAVE_DER
    (4) listaDeclaracionesAsignaciones -> . declaracionVariable listaDeclaracionesAsignaciones
    (5) listaDeclaracionesAsignaciones -> . declaracionAsignacionVariable listaDeclaracionesAsignaciones
    (6) listaDeclaracionesAsignaciones -> . sentAsignacion listaDeclaracionesAsignaciones
    (7) listaDeclaracionesAsignaciones -> . empty
    (27) declaracionVariable -> . tipoDato ID PUNTOCOMA
    (28) declaracionVariable -> . tipoDato CORCHETE_IZQ CORCHETE_DER ID PUNTOCOMA
    (29) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION expresion PUNTOCOMA
    (30) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION llamarFuncion PUNTOCOMA
    (31) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION instanciaObj PUNTOCOMA
    (32) declaracionAsignacionVariable -> . tipoDato CORCHETE_IZQ CORCHETE_DER ID ASIGNACION bloqueArgumentos PUNTOCOMA
    (33) sentAsignacion -> . ID ASIGNACION expresion PUNTOCOMA
    (34) sentAsignacion -> . accesoArreglo ASIGNACION expresion PUNTOCOMA
    (35) sentAsignacion -> . ID ASIGNACION llamarFuncion PUNTOCOMA
    (98) empty -> .
    (37) tipoDato -> . TIPO_FECHA
    (38) tipoDato -> . TIPO_HORA
    (39) tipoDato -> . TIPO_BOOL
    (40) tipoDato -> . TIPO_ENTERO
    (41) tipoDato -> . TIPO_REAL
    (42) tipoDato -> . TIPO_CADENA
    (43) tipoDato -> . TIPO_SENSOR
    (44) tipoDato -> . TIPO_DISPOSITIVO
    (70) accesoArreglo -> . ID CORCHETE_IZQ expresion CORCHETE_DER

    ID              shift and go to state 18
    LLAVE_DER       reduce using rule 98 (empty -> .)
    TIPO_FECHA      shift and go to state 20
    TIPO_HORA       shift and go to state 21
    TIPO_BOOL       shift and go to state 22
    TIPO_ENTERO     shift and go to state 23
    TIPO_REAL       shift and go to state 24
    TIPO_CADENA     shift and go to state 25
    TIPO_SENSOR     shift and go to state 26
    TIPO_DISPOSITIVO shift and go to state 27

    listaDeclaracionesAsignaciones shift and go to state 12
    declaracionVariable            shift and go to state 13
    declaracionAsignacionVariable  shift and go to state 14
    sentAsignacion                 shift and go to state 15
    empty                          shift and go to state 16
    tipoDato                       shift and go to state 17
    accesoArreglo                  shift and go to state 19

state 8

    (1) programa -> defConf defAuto bloqueLoop .

    $end            reduce using rule 1 (programa -> defConf defAuto bloqueLoop .)


state 9

    (12) bloqueLoop -> LOOP_PRINCIPAL . bloqueCodigo
    (13) bloqueCodigo -> . LLAVE_IZQ listaSentencias LLAVE_DER

    LLAVE_IZQ       shift and go to state 29

    bloqueCodigo                   shift and go to state 28

state 10

    (8) defAuto -> DEF_AUTO bloqueCodigoDefAuto .

    LOOP_PRINCIPAL  reduce using rule 8 (defAuto -> DEF_AUTO bloqueCodigoDefAuto .)


state 11

    (9) bloqueCodigoDefAuto -> LLAVE_IZQ . listaFunciones LLAVE_DER
    (10) listaFunciones -> . declaracionFuncion listaFunciones
    (11) listaFunciones -> . empty
    (71) declaracionFuncion -> . FUNCION ID PARENTESIS_IZQ listaParametros PARENTESIS_DER RETORNO tipoDato bloqueCodigo
    (98) empty -> .

    FUNCION         shift and go to state 33
    LLAVE_DER       reduce using rule 98 (empty -> .)

    listaFunciones                 shift and go to state 30
    declaracionFuncion             shift and go to state 31
    empty                          shift and go to state 32

state 12

    (3) bloqueCodigoDefConf -> LLAVE_IZQ listaDeclaracionesAsignaciones . LLAVE_DER

    LLAVE_DER       shift and go to state 34


state 13

    (4) listaDeclaracionesAsignaciones -> declaracionVariable . listaDeclaracionesAsignaciones
    (4) listaDeclaracionesAsignaciones -> . declaracionVariable listaDeclaracionesAsignaciones
    (5) listaDeclaracionesAsignaciones -> . declaracionAsignacionVariable listaDeclaracionesAsignaciones
    (6) listaDeclaracionesAsignaciones -> . sentAsignacion listaDeclaracionesAsignaciones
    (7) listaDeclaracionesAsignaciones -> . empty
    (27) declaracionVariable -> . tipoDato ID PUNTOCOMA
    (28) declaracionVariable -> . tipoDato CORCHETE_IZQ CORCHETE_DER ID PUNTOCOMA
    (29) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION expresion PUNTOCOMA
    (30) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION llamarFuncion PUNTOCOMA
    (31) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION instanciaObj PUNTOCOMA
    (32) declaracionAsignacionVariable -> . tipoDato CORCHETE_IZQ CORCHETE_DER ID ASIGNACION bloqueArgumentos PUNTOCOMA
    (33) sentAsignacion -> . ID ASIGNACION expresion PUNTOCOMA
    (34) sentAsignacion -> . accesoArreglo ASIGNACION expresion PUNTOCOMA
    (35) sentAsignacion -> . ID ASIGNACION llamarFuncion PUNTOCOMA
    (98) empty -> .
    (37) tipoDato -> . TIPO_FECHA
    (38) tipoDato -> . TIPO_HORA
    (39) tipoDato -> . TIPO_BOOL
    (40) tipoDato -> . TIPO_ENTERO
    (41) tipoDato -> . TIPO_REAL
    (42) tipoDato -> . TIPO_CADENA
    (43) tipoDato -> . TIPO_SENSOR
    (44) tipoDato -> . TIPO_DISPOSITIVO
    (70) accesoArreglo -> . ID CORCHETE_IZQ expresion CORCHETE_DER

    ID              shift and go to state 18
    LLAVE_DER       reduce using rule 98 (empty -> .)
    TIPO_FECHA      shift and go to state 20
    TIPO_HORA       shift and go to state 21
    TIPO_BOOL       shift and go to state 22
    TIPO_ENTERO     shift and go to state 23
    TIPO_REAL       shift and go to state 24
    TIPO_CADENA     shift and go to state 25
    TIPO_SENSOR     shift and go to state 26
    TIPO_DISPOSITIVO shift and go to state 27

    declaracionVariable            shift and go to state 13
    listaDeclaracionesAsignaciones shift and go to state 35
    declaracionAsignacionVariable  shift and go to state 14
    sentAsignacion                 shift and go to state 15
    empty                          shift and go to state 16
    tipoDato                       shift and go to state 17
    accesoArreglo                  shift and go to state 19

state 14

    (5) listaDeclaracionesAsignaciones -> declaracionAsignacionVariable . listaDeclaracionesAsignaciones
    (4) listaDeclaracionesAsignaciones -> . declaracionVariable listaDeclaracionesAsignaciones
    (5) listaDeclaracionesAsignaciones -> . declaracionAsignacionVariable listaDeclaracionesAsignaciones
    (6) listaDeclaracionesAsignaciones -> . sentAsignacion listaDeclaracionesAsignaciones
    (7) listaDeclaracionesAsignaciones -> . empty
    (27) declaracionVariable -> . tipoDato ID PUNTOCOMA
    (28) declaracionVariable -> . tipoDato CORCHETE_IZQ CORCHETE_DER ID PUNTOCOMA
    (29) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION expresion PUNTOCOMA
    (30) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION llamarFuncion PUNTOCOMA
    (31) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION instanciaObj PUNTOCOMA
    (32) declaracionAsignacionVariable -> . tipoDato CORCHETE_IZQ CORCHETE_DER ID ASIGNACION bloqueArgumentos PUNTOCOMA
    (33) sentAsignacion -> . ID ASIGNACION expresion PUNTOCOMA
    (34) sentAsignacion -> . accesoArreglo ASIGNACION expresion PUNTOCOMA
    (35) sentAsignacion -> . ID ASIGNACION llamarFuncion PUNTOCOMA
    (98) empty -> .
    (37) tipoDato -> . TIPO_FECHA
    (38) tipoDato -> . TIPO_HORA
    (39) tipoDato -> . TIPO_BOOL
    (40) tipoDato -> . TIPO_ENTERO
    (41) tipoDato -> . TIPO_REAL
    (42) tipoDato -> . TIPO_CADENA
    (43) tipoDato -> . TIPO_SENSOR
    (44) tipoDato -> . TIPO_DISPOSITIVO
    (70) accesoArreglo -> . ID CORCHETE_IZQ expresion CORCHETE_DER

    ID              shift and go to state 18
    LLAVE_DER       reduce using rule 98 (empty -> .)
    TIPO_FECHA      shift and go to state 20
    TIPO_HORA       shift and go to state 21
    TIPO_BOOL       shift and go to state 22
    TIPO_ENTERO     shift and go to state 23
    TIPO_REAL       shift and go to state 24
    TIPO_CADENA     shift and go to state 25
    TIPO_SENSOR     shift and go to state 26
    TIPO_DISPOSITIVO shift and go to state 27

    declaracionAsignacionVariable  shift and go to state 14
    listaDeclaracionesAsignaciones shift and go to state 36
    declaracionVariable            shift and go to state 13
    sentAsignacion                 shift and go to state 15
    empty                          shift and go to state 16
    tipoDato                       shift and go to state 17
    accesoArreglo                  shift and go to state 19

state 15

    (6) listaDeclaracionesAsignaciones -> sentAsignacion . listaDeclaracionesAsignaciones
    (4) listaDeclaracionesAsignaciones -> . declaracionVariable listaDeclaracionesAsignaciones
    (5) listaDeclaracionesAsignaciones -> . declaracionAsignacionVariable listaDeclaracionesAsignaciones
    (6) listaDeclaracionesAsignaciones -> . sentAsignacion listaDeclaracionesAsignaciones
    (7) listaDeclaracionesAsignaciones -> . empty
    (27) declaracionVariable -> . tipoDato ID PUNTOCOMA
    (28) declaracionVariable -> . tipoDato CORCHETE_IZQ CORCHETE_DER ID PUNTOCOMA
    (29) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION expresion PUNTOCOMA
    (30) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION llamarFuncion PUNTOCOMA
    (31) declaracionAsignacionVariable -> . tipoDato ID ASIGNACION instanciaObj PUNTOCOMA
    (32) declaracionAsignacionVariable -> . tipoDato CORCHETE_IZQ CORCHETE_DER ID ASIGNACION bloqueArgumentos PUNTOCOMA
    (33) sentAsignacion -> . ID ASIGNACION expresion PUNTOCOMA
    (34) sentAsignacion -> . accesoArreglo ASIGNACION expresion PUNTOCOMA
    (35) sentAsignacion -> . ID ASIGNACION llamarFuncion PUNTOCOMA
    (98) empty -> .
    (37) tipoDato -> . TIPO_FECHA
    (38) tipoDato -> . TIPO_HORA
    (39) tipoDato -> . TIPO_BOOL
    (40) tipoDato -> . TIPO_ENTERO
    (41) tipoDato -> . TIPO_REAL
    (42) tipoDato -> . TIPO_CADENA
    (43) tipoDato -> . TIPO_SENSOR
    (44) tipoDato -> . TIPO_DISPOSITIVO
    (70) accesoArreglo -> . ID CORCHETE_IZQ expresion CORCHETE_DER

    ID              shift and go to state 18
    LLAVE_DER       reduce using rule 98 (empty -> .)
    TIPO_FECHA      shift and go to state 20
    TIPO_HORA       shift and go to state 21
    TIPO_BOOL       shift and go to state 22
    TIPO_ENTERO     shift and go to state 23
    TIPO_REAL       shift and go to state 24
    TIPO_CADENA     shift and go to state 25
    TIPO_SENSOR     shift and go to state 26
    TIPO_DISPOSITIVO shift and go to state 27

    sentAsignacion                 shift and go to state 15
    listaDeclaracionesAsignaciones shift and go to state 37
    declaracionVariable            shift and go to state 13
    declaracionAsignacionVariable  shift and go to state 14
    empty                          shift and go to state 16
    tipoDato                       shift and go to state 17
    accesoArreglo                  shift and go to state 19

state 16

    (7) listaDeclaracionesAsignaciones -> empty .

    LLAVE_DER       reduce using rule 7 (listaDeclaracionesAsignaciones -> empty .)


state 17

    (27) declaracionVariable -> tipoDato . ID PUNTOCOMA
    (28) declaracionVariable -> tipoDato . CORCHETE_IZQ CORCHETE_DER ID PUNTOCOMA
    (29) declaracionAsignacionVariable -> tipoDato . ID ASIGNACION expresion PUNTOCOMA
    (30) declaracionAsignacionVariable -> tipoDato . ID ASIGNACION llamarFuncion PUNTOCOMA
    (31) declaracionAsignacionVariable -> tipoDato . ID ASIGNACION instanciaObj PUNTOCOMA
    (32) declaracionAsignacionVariable -> tipoDato . CORCHETE_IZQ CORCHETE_DER ID ASIGNACION bloqueArgumentos PUNTOCOMA

    ID              shift and go to state 38
    CORCHETE_IZQ    shift and go to state 39


state 18

    (33) sentAsignacion -> ID . ASIGNACION expresion PUNTOCOMA
    (35) sentAsignacion -> ID . ASIGNACION llamarFuncion PUNTOCOMA
    (70) accesoArreglo -> ID . CORCHETE_IZQ expresion CORCHETE_DER
